--- a/home.html
+++ b/home.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>hello sit223</title>
-    <h1>hello sit23232</h1>
+  <meta charset="UTF-8">
+  <title>Deakin Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <div class="login-box">
+    <h2>Deakin Login</h2>
+    <form>
+      <input type="text" placeholder="Username or Email">
+      <input type="password" placeholder="Password">
+      <button type="submit">Login</button>
+    </form>
+  </div>
 </body>
 </html>
