--- a/home.html
+++ b/home.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Deakin Login</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Deakin University Login</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="login-box">
-    <h2>Deakin Login</h2>
-    <form>
-      <input type="text" placeholder="Username or Email">
-      <input type="password" placeholder="Password">
-      <button type="submit">Login</button>
-    </form>
-  </div>
+<body class="d-flex flex-column min-vh-100 bg-light">
+  <!-- Top Banner -->
+  <header class="navbar navbar-dark bg-black shadow-sm">
+    <div class="container d-flex align-items-center gap-3 py-2">
+      <!-- Bootstrap utility class img-fluid keeps proportions, w-auto avoids stretching -->
+      <img src="https://pngvoices.deakin.edu.au/themes/deakin-pngvoices/images/home/logo-DEAKIN.png"
+           alt="Deakin University" class="img-fluid" style="height: 100px; width: auto;">
+      <span class="navbar-brand mb-0 h1">Deakin University</span>
+    </div>
+  </header>
+
+  <!-- Main / Centered Login Card -->
+  <main class="flex-fill d-flex align-items-center justify-content-center py-5">
+    <div class="container" style="max-width: 420px;">
+      <div class="card border-0 shadow-lg rounded-4">
+        <div class="card-body p-4 p-md-5">
+          <h2 class="h4 text-center mb-4">Sign in</h2>
+          <form>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email or Username</label>
+              <input type="text" class="form-control" id="email" placeholder="your.name@deakin.edu.au" required>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" class="form-control" id="password" placeholder="••••••••" required>
+            </div>
+            <div class="d-flex justify-content-between align-items-center mb-3">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="remember" checked>
+                <label class="form-check-label" for="remember">Remember me</label>
+              </div>
+              <a href="#" class="link-primary text-decoration-none">Forgot password?</a>
+            </div>
+            <button type="submit" class="btn btn-dark w-100">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="mt-auto bg-dark text-white-50 py-3">
+    <div class="container text-center small">
+      &copy; 2025 Deakin University. All rights reserved.
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
